--- a/nRF24Web/usermanagment/templates/registration/login.html
+++ b/nRF24Web/usermanagment/templates/registration/login.html
@@ -16,3 +16,12 @@
 {% endif %}
 
 {% endblock %}
+
+<!-- 
+    <form name="LoginForm" action="/user/login/" method="post">
+      {% csrf_token %}
+
+      <input type="text" id="username" name="username" placeholder="Username">
+      <input type="password" name="password" id="password" placeholder="Password">
+
+-->
