--- a/nRF24Web/usermanagment/templates/static.html
+++ b/nRF24Web/usermanagment/templates/static.html
@@ -38,15 +38,13 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Services</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
 
         {% if user.is_authenticated %} 
+
+        <li class="nav-item">
+          <a class="nav-link" href="/dashboard">My dashboard</a>
+        </li>
+
         <li class="nav-item">
             <a class="nav-link" href="/user/logout/">Log Out</a>
           </li>
@@ -64,7 +62,7 @@
 </nav>
  
 <!-- Page Content -->
-<div class="container text-info" style="margin-top: 200px;">
+<div class="container text-info pt-1">
 
    
     {% block content %} {% endblock %}
