--- a/nRF24Web/data/templates/dashboard.html
+++ b/nRF24Web/data/templates/dashboard.html
@@ -22,7 +22,7 @@
     <div class = "col-md-6">
         <a href="/dashboard/channel/add"><h4>Add measuring channels</h4></a>
     </div>
-        <a href="/dashboard/channel/listall"><h4>List all channels</h4></a>
+        <a href="/dashboard/channel"><h4>List all channels</h4></a>
     <div class = "col-md-6">
 
         
