--- a/nRF24Web/usermanagment/templates/static.html
+++ b/nRF24Web/usermanagment/templates/static.html
@@ -53,7 +53,7 @@
             <a class="nav-link" href="/user/login/">Log In</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="/user/register/">Register</a>
+              <a class="nav-link" href="/user/register">Register</a>
             </li>
         {% endif %}
       </ul>
