--- a/nRF24Web/data/templates/channels.html
+++ b/nRF24Web/data/templates/channels.html
@@ -43,8 +43,14 @@
               <input type="email" class="form-control" placeholder="Enter channel label">
             </div>
             <div class="form-group">
-              <label for="exampleInputPassword1">Mqtt Broker</label>
-              <input type="text" class="form-control" placeholder="Enter MqttBroker">
+                <label for="sel2">Select broker from the list:</label>
+                <select class="form-control" id="sel2">
+                  <option>1</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                </select>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
