Added broker input

--- a/nRF24Web/data/templates/channels.html
+++ b/nRF24Web/data/templates/channels.html
@@ -1,60 +1,132 @@
-{% extends 'static.html' %}
+{% extends 'static.html' %} {% block title %} Channels {% endblock %} {%block content%}
 
-{% block title %} Channels {% endblock %}
+<div class="row py-5">
+    <div class="col-md-8 px-5">
 
-{%block content%}
+        <h3>My channels</h3>
 
-<div class= "row">
-    <div class = "col-md-6 px-4">
+        <br>
 
         <table class="table">
             <thead>
-              <tr>
-                <th scope="col">Channel label</th>
-                <th scope="col">Channel ID</th>
-                <th scope="col">MqttBroker</th>
-              </tr>
+                <tr>
+                    <th scope="col">Channel label</th>
+                    <th scope="col">Channel ID</th>
+                    <th scope="col">Mqtt Link</th>
+                    <th scope="col">Mqtt Broker</th>
+                </tr>
             </thead>
             <tbody>
-              {%if channels%}
-              
-              {% for ch in channels %}
-              <tr>
-                <th scope="row">{{ch.label}}</th>
-                <td>{{ch.fieldId}}</td>
-                <td>{{ch.mqttBroker}}</td>
-              </tr>
-              {% endfor %}
+                {%if channels%} {% for ch in channels %}
+                <tr>
+                    <th scope="row">{{ch.label}}</th>
+                    <td>{{ch.fieldId}}</td>
+                    <td>{{ch.mqttLink}}</td>
+                    <td>{{ch.mqttBroker}}</td>
+                </tr>
+                {% endfor %} {%endif%}
 
-              {%endif%}
-
-            
             </tbody>
-          </table>
-          
+        </table>
 
     </div>
-    <div class ="col-md-6 px-4">
+    <div class="col-md-4 px-5">
+            <h3>Add channel</h3>
 
-        <form>
+            <br>
+
+        <form  autocomplete="off">
             {% csrf_token %}
+
             <div class="form-group">
-              <label>Channel Label</label>
-              <input type="email" class="form-control" placeholder="Enter channel label">
+                <label>Channel Label</label>
+                <input type="email" class="form-control" placeholder="Enter channel label" autocomplete="off">
             </div>
+
             <div class="form-group">
-                <label for="sel2">Select broker from the list:</label>
+
+                <label for="sel2">Select broker from the list</label>
                 <select class="form-control" id="sel2">
-                  <option>1</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5</option>
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
                 </select>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
+        </form>
     </div>
+</div>
+
+<div class="row py-5">
+        <div class="col-md-8 px-5">
+
+                <h3>My Mqtt Brokers</h3>
+        
+                <br>
+        
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">Broker name</th>
+                            <th scope="col">Broker address</th>
+                            <th scope="col">Broker port</th>
+                            <th scope="col">User name</th>
+                            
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {%if mqttBrokers%} {% for mqtt in mqttBrokers %}
+                        <tr>
+                            <th scope="row">{{mqtt.description}}</th>
+                            <td>{{mqtt.mqttAddr}}</td>
+                            <td>{{mqtt.mqttPort}}</td>
+                            <td>{{mqtt.mqttUserName}}</td>
+                        </tr>
+                        {% endfor %} {%endif%}
+        
+                    </tbody>
+                </table>
+        
+            </div>
+    <div class="col-md-4 px-5">
+        <h3>Add Mqtt Broker</h3>
+
+        <br>
+
+        <form action="/dashboard/addMqttBroker" method="post"  autocomplete="off" >
+            {% csrf_token %}
+
+            <div class="form-group">
+                <label for="description">Name </label>
+                <input id="description" type="text" name="description" class="form-control"  placeholder="Enter name of Mqtt broker">
+            </div>
+
+            <div class="form-group">
+                <label for="mqttAddr">Mqtt Address </label>
+                <input id="mqttAddr" type="text" name="mqttAddr" class="form-control"  placeholder="Enter address of Mqtt broker">
+            </div>
+
+            <div class="form-group">
+                    <label for="mqttPort">Mqtt Port </label>
+                    <input id="mqttPort" type="number" name="mqttPort" class="form-control"  placeholder="Enter port for Mqtt broker" value=1883 >
+                </div>
+
+            <div class="form-group">
+                <label for="mqttUserName">Mqtt Username <small>Blank for none</small> </label>
+                <input id="mqttUserName" type="text" name="mqttUserName" class="form-control"  placeholder="Enter username for Mqtt broker" autocomplete="off">
+            </div>
+            <div class="form-group">
+                <label for="mqttPassword">Mqtt Password <small>Blank for none</small> </label>
+                <input id="mqttPassword" type="password" name="mqttPassword" class="form-control"  placeholder="Enter password for Mqtt broker" autocomplete="off" >
+            </div>
+           
+
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
+
 </div>
 
 {% endblock %}
