--- a/nRF24Web/usermanagment/templates/static.html
+++ b/nRF24Web/usermanagment/templates/static.html
@@ -42,7 +42,7 @@
         {% if user.is_authenticated %} 
 
         <li class="nav-item">
-          <a class="nav-link" href="/dashboard">My dashboard</a>
+          <a class="nav-link" href="/dashboard/">My dashboard</a>
         </li>
 
         <li class="nav-item">
